--- a/ConsoleApplication4/ConsoleApplication4.vcxproj
+++ b/ConsoleApplication4/ConsoleApplication4.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{41DB1E29-66C6-42F3-B162-875933BA4553}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ConsoleApplication4</RootNamespace>
+    <ProjectName>DateLib_UnitTests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
